--- a/business/templates/businessCreditBuilding/goals.html
+++ b/business/templates/businessCreditBuilding/goals.html
@@ -83,6 +83,7 @@
                     </div>
                 </div>
             </div>
+        {% if dynamic.show_credit_repair_plan %}
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://images.pexels.com/photos/210881/pexels-photo-210881.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
@@ -99,6 +100,7 @@
                     </div>
                 </div>
             </div>
+        {% endif %}
             {% if dynamic.is_main_site %}
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
