--- a/whitelabelpartnerportal/templates/becomingapartner.html
+++ b/whitelabelpartnerportal/templates/becomingapartner.html
@@ -22,7 +22,6 @@
         {#            </div>#}
         {#            <div class="card-body">#}
 
-
         <div class="row justify-content-center mb-5">
             <div>
                 <h1>
@@ -52,9 +51,18 @@
 
                             </ul>
                         </div>
-                        <div class="text-center py-4"><h1>${{ dynamic.basic_partnership_program_price }} / Year</h1>
-                            <h3>(We Do Have Financing Available)</h3></div>
-                        <a class="btn btn-primary btn-block">Order Now</a>
+                        {% if dynamic.offer_paid_whitelabel %}
+                            <div class="text-center py-4"><h1>${{ dynamic.basic_partnership_program_price }} /
+                                Year</h1>
+                                <h3>(We Do Have Financing Available)</h3></div>
+                            <form>
+                                <button type="submit" class="btn btn-primary btn-block">Order Now</button>
+                            </form>
+                        {% else %}
+                             <div class="text-center pt-4"><h1>Free of charge</h1></div>
+                            <a class="btn btn-primary btn-block mt-4"
+                               href="{% url "whitelabelpartnerportal:becomingapartner1" %}">Register</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -90,7 +98,8 @@
 
                             </ul>
                         </div>
-                        <div class="text-center py-4"><h1>${{ dynamic.premium_partnership_program_price }} / Month</h1>
+                        <div class="text-center py-4"><h1>${{ dynamic.premium_partnership_program_price }} /
+                            Month</h1>
                             <h3>3 Month Commitment</h3>
                             <h3>(Not Including Marketing Budget)</h3></div>
 
@@ -133,119 +142,13 @@
                                 <li>Free Access To Our CRM Service Up To 25 Users</li>
                             </ul>
                         </div>
-                        <a class="btn btn-primary btn-block" href="{{ dynamic.appointment_link }}" target="_blank">Schedule An Appointment</a>
+                        <a class="btn btn-primary btn-block" href="{{ dynamic.appointment_link }}" target="_blank">Schedule
+                            An Appointment</a>
 
                     </div>
                 </div>
             </div>
         </div>
-        {#            </div>#}
-        {#        </div>#}
-
-
-        {#        {% if not form and partners %}#}
-        {#            <div class="card">#}
-        {#                <div class="card-header card-default">#}
-        {#                    Your Provided Business Information#}
-        {#                </div>#}
-        {#                <div class="card-body">#}
-        {#                    <div class="col-md-12">#}
-        {#                        <table id="datatable" class="table table-striped dt-responsive nowrap">#}
-        {#                            <thead>#}
-        {#                            <tr>#}
-        {#                                <th>Logo</th>#}
-        {#                                <th>Business Name</th>#}
-        {#                                <th>Business Number</th>#}
-        {#                                <th>Edit</th>#}
-        {#                                <th>Delete</th>#}
-        {#                            </tr>#}
-        {#                            </thead>#}
-        {#                            <tbody>#}
-        {#                            {% for partner in partners %}#}
-        {#                                <tr>#}
-        {#                                    <td>{% if partner.logo %}#}
-        {#                                        <img src="{{ partner.logo.url }}" height="80px">#}
-        {#                                    {% else %}#}
-        {#                                        No Logo#}
-        {#                                    {% endif %}#}
-        {#                                    </td>#}
-        {#                                    <td>{{ partner.business_name }}</td>#}
-        {#                                    <td>{{ partner.business_number }}</td>#}
-        {#                                    <td><a class="btn btn-primary"#}
-        {#                                           href="/whitelabelpartnerportal/becomingapartner/edit/{{ partner.id }}">Edit</a>#}
-        {#                                    </td>#}
-        {#                                    <td>#}
-        {#                                        <form method="post" id="delete" name="delete" action="">#}
-        {#                                            {% csrf_token %}#}
-        {#                                            <input type="text" name="delete" value="{{ partner.id }}" hidden/>#}
-        {#                                            <input type="submit" value="Delete" class="btn btn-primary"/>#}
-        {#                                        </form>#}
-        {#                                    </td>#}
-        {#                                </tr>#}
-        {#                            {% endfor %}#}
-        {#                            </tbody>#}
-        {#                        </table>#}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            </div>#}
-        {#        {% endif %}#}
-        {##}
-        {##}
-        {#        {% if form %}#}
-        {#            <div class="card">#}
-        {#                <div class="card-header card-default">#}
-        {#                    Edit Partner Information#}
-        {#                </div>#}
-        {#                <div class="card-body">#}
-        {#                    <div class="col-md-12">#}
-        {#                        <form method="post">{% csrf_token %}#}
-        {#                            {{ form.as_p }}#}
-        {#                            <div class="btn-toolbar">#}
-        {#                                <button type="submit" class="btn btn-primary mr-1">Submit</button>#}
-        {#                                <button class="btn btn-primary" href="javascript:history.go(-1)">Back</button>#}
-        {#                            </div>#}
-        {#                        </form>#}
-        {##}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            </div>#}
-        {##}
-        {#        {% else %}#}
-        {##}
-        {#            <div class="card">#}
-        {#                <div class="card-header card-default">#}
-        {#                    Enter In Your Business Information To Become A Partner#}
-        {#                </div>#}
-        {#                <div class="card-body">#}
-        {#                    <div class="col-md-12">#}
-        {#                        <form accept-charset="UTF-8"#}
-        {#                              method="post" enctype="multipart/form-data">{% csrf_token %}#}
-        {#                            <div class="form-group">#}
-        {#                                <label for="newlead_firstname">Business Name You Would Like To Use</label>#}
-        {#                                <input type="text" name="business_name" id="newlead_firstname"/>#}
-        {#                            </div>#}
-        {#                            <div class="form-group">#}
-        {#                                <label for="newlead_lastname">Business Phone Number You Would Like To Use </label>#}
-        {#                                <input type="text" name="business_number" id="newlead_lastname"/>#}
-        {#                            </div>#}
-        {#                            <div class="form-group">#}
-        {#                                <label for="logo">Logo</label>#}
-        {#                                <input type="file" name="logo" id="logo"/>#}
-        {#                            </div>#}
-        {##}
-        {#                            <div class="btn-toolbar">#}
-        {#                                <button type="submit" name="commit" value="Create Newlead" class="btn btn-primary mr-1"#}
-        {#                                        data-disable-with="Create Newlead">Beceome A Partner#}
-        {#                                </button>#}
-        {#                                <button class="btn btn-primary" href="javascript:history.go(-1)">Back</button>#}
-        {#                            </div>#}
-        {##}
-        {#                        </form>#}
-        {#                    </div>#}
-        {#                </div>#}
-        {##}
-        {#            </div>#}
-        {#        {% endif %}#}
 
 
     </section>
